<?xml version="1.0"?>
<package format="2">
  <name>atlas_garden_joystick</name>
  <version>0.0.0</version>
  <description>Atlas garden joystick</description>

  <maintainer email="ibrahim@atlas-robotics.com">ibrahim</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <export/>
</package>
